# DockingGame

./: Cargo.toml
assets/sprites/: spaceship.aseprite  spaceship.json  spaceship_thurst.aseprite
src/: main.rs
