[package]
name = "DockingGame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
[dependencies]
bevy = "*"
rand = "*"
bevy_rapier2d = { version = "*", features = [ "simd-stable", "debug-render" ] }